# CPS-ML-Maze

./: .gitignore  README.md  pyproject.toml
calibration/: README.md
calibration/refresh_backup_20260710_003727/calibration/: axis_map.npz  board_homography.npz  live_confusers.json  live_roi.json
calibration/refresh_backup_20260710_003727/configs/: maze_holes.csv  maze_path_auto.csv
calibration/refresh_backup_20260711_174203/calibration/: board_homography.npz  live_confusers.json  live_roi.json
calibration/refresh_backup_20260711_174203/configs/: maze_holes.csv  maze_path_auto.csv
calibration/refresh_backup_20260711_190709/calibration/: board_homography.npz
configs/: default.yaml  example_path.csv  maze_holes.csv  maze_path_auto.csv
docs/: CHARUCO_IMPLEMENTATION_BRIEF.md  FINAL_DEMO_STAGED_ROADMAP.md  LIVE_MVP_DEVELOPMENT_ROADMAP.md  MANDATORY_MVP_NEXT_STEPS.md
docs/paper/: software_setup.md  struggles.md
docs/video/: README.md
scripts/: build_wall_mask.py  calibrate_camera_intrinsics.py  calibrate_charuco_homography.py  check_camera.py  inspect_charuco_homography.py  keyboard_teleop.py  launcher.py  peep_antiwarp.py  phone_tilt_teleop.py  phone_tilt_teleop_page.html  pipeline.py  recalibrate_all.py  record_camera.py  run_autonomous.py  select_maze_roi.py  test_threshold.py  track_ball_v7.py  visualize_run.py
src/cps_maze/: camera.py
src/cps_maze/calibration/: charuco.py  intrinsics.py
tests/: test_charuco_calibration.py  test_hazards.py  test_intrinsics.py  test_phone_tilt.py  test_recovery_astar.py  test_run_autonomous.py  test_state_estimator.py
(+24 files in other folders)
